tests/NormalTests/paczka1/small_fuzzy/58770870.err
Error in line 1: OE5sQ S329 33,6
Error in line 8: eTHlXQu41va S355 85,7
Error in line 4: OE5sQ S355 13,6
